frontend/test/should_fail/retype_001.grg
using attrib_model_001;

rule r {
	a:NINT;
	b:NINT;
	a -e:Edge-> b;

	replace {
		c: NFLOAT<a>;
		a -e-> c;
		
	}
}

